--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ server.port=8080
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=seifhesham2030@gmail.com
-spring.mail.password=cvvd vcmz rhyt wvpc
+spring.mail.username=#your email 
+spring.mail.password= #your application password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
